[package]
name = "xoxo-picture"
version = "0.1.0"
authors = ["Gabin Lefranc <gabin.lefranc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.9"
progress = "0.2.0"
# num-traits = "0.2.12"
rand = "0.7.3"
# args = "2.2.0"
# getopts = "0.2.21"

[dependencies.clap]
version = "3.0.0-beta.1"
features = [ "suggestions", "color", "derive"]
